[project]
name = "code-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.4",
    "gitpython>=3.1.44",
    "mcp[cli]>=1.9.0",
    "openai>=1.79.0",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
    "tree-sitter==0.20.1",
    "tree-sitter-languages==1.10.2",
]
